--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:h1UXQDNQSOGZ7kXz/vcXKSMiBgajD81BT/5jOmkFTbY=
 APP_DEBUG=true
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -9,9 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
+APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
@@ -20,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=expenses
+DB_USERNAME=toor
+DB_PASSWORD=toor
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -38,7 +37,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -47,13 +46,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="thiiagoms@proton.me"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
